Colaboratory를 통해 생성됨

--- a/py21_matplotlib.ipynb
+++ b/py21_matplotlib.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCLBlkeAQeTFgstjykU5Wn",
+      "authorship_tag": "ABX9TyOOmdgvLcq7PBAXBblj6Wko",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1024,6 +1024,78 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Exercises"
+      ],
+      "metadata": {
+        "id": "feLL_kcjtiwY"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 1. 요일 막대 그래프(요일 빈도수)\n",
+        "\n",
+        "* 세로 막대 그래프\n",
+        "* 가로 막대 그래프\n"
+      ],
+      "metadata": {
+        "id": "iu8vsGqgtm-I"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 2. 흡연여부 막대 그래프(흡연자/비흡연자 빈도수)\n",
+        "\n",
+        "* 세로 막대 그래프\n",
+        "* 가로 막대 그래프\n"
+      ],
+      "metadata": {
+        "id": "YLt6IRCRtwD_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 3. 식사 인원 막대 그래프\n",
+        "\n",
+        "* 세로 막대 그래프\n",
+        "* 가로 막대 그래프\n"
+      ],
+      "metadata": {
+        "id": "uBSM6JkCt3LA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 4. 성별 tip의 box plot을 하나의 subplot에 그리기."
+      ],
+      "metadata": {
+        "id": "gCOVWESnuJlQ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 5. 시간별 tip의 box plot을 하나의 subplot에 그리기."
+      ],
+      "metadata": {
+        "id": "PVOgQ6AsuxOg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Ex 6. 요일별 tip의 box plot을 하나의 subplot에 그리기."
+      ],
+      "metadata": {
+        "id": "Wnpuu9ftudpv"
+      }
     }
   ]
 }
