Colaboratory를 통해 생성됨

--- a/py25_movielens.ipynb
+++ b/py25_movielens.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPbxCuy4SZTh8RpyZJ2Kld",
+      "authorship_tag": "ABX9TyO+2sMyO9nPsg+lGDqf4QS/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -438,6 +438,7 @@
       "source": [
         "# sns.barplot(x=year_counts.index, y=year_counts.values)\n",
         "plt.bar(x=year_counts.index, height=year_counts.values)\n",
+        "# plt.xticks(array-like)\n",
         "plt.show()"
       ],
       "metadata": {
