--- a/ml01_numpy.ipynb
+++ b/ml01_numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmsFv/uPmhFehym4GzAH9C",
+      "authorship_tag": "ABX9TyPHCf1ZbS8eiQ8LiNTEjFVR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -604,6 +604,384 @@
           "execution_count": 45
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Shape 변경\n",
+        "\n",
+        "* `np.ndarray.reshape(shape)`\n",
+        "* `np.ndarray.ravel()`\n",
+        "* `np.ndarray.flatten()`\n",
+        "* `np.newaxis` 속성 이용\n"
+      ],
+      "metadata": {
+        "id": "CHy7MbU4ZoXX"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## reshape"
+      ],
+      "metadata": {
+        "id": "LmMiEFjxaJtv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_1d = np.arange(12)\n",
+        "print(arr_1d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SsVlgonSaMDl",
+        "outputId": "4ce753bb-f024-470d-b95f-914ac7b4c2e3"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# arr_1d 배열을 (4, 3) shape의 2차원 배열로 변환 -> 모양이 변환된 새로운 배열이 리턴.\n",
+        "arr_2d = arr_1d.reshape((4, 3))\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ek4tlXyAaSCd",
+        "outputId": "17a9c213-0025-48a3-d0a3-fe95d31eef0b"
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [ 6  7  8]\n",
+            " [ 9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reshape을 할 때 자동으로 계산될 수 있는 차원 값에는 -1을 사용할 수 있음.\n",
+        "arr_2d = arr_1d.reshape((3, -1))\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6mZvW-pBayr8",
+        "outputId": "898223f7-7cae-49a5-b807-26ecd4ee55d7"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_2d = arr_1d.reshape((-1, 4))\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e5hs9-58daFc",
+        "outputId": "3e9e06e8-7276-4cb8-ff39-5afdcc8a4b26"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_2d.reshape((3*4,))  # reshape(3*4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lhGlz-CUdv5D",
+        "outputId": "a592c144-a431-4cb8-ede8-d94e884bcb67"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "arr_2d.reshape((-1,))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6VXg4l8aeDYE",
+        "outputId": "9973762d-ab94-42f4-b531-973a4df533b2"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `ravel` vs `flatten`\n",
+        "\n",
+        "* `ravel`: 1차원으로 변환된 배열의 **view**를 리턴. 배열은 1개이고, 단지 모양만 다르게 보여주는 것.\n",
+        "* `flatten`: 1차원으로 변환된 배열의 **복사본**을 리턴. 원본 배열과는 별개의 새로운 배열이 생성됨.\n"
+      ],
+      "metadata": {
+        "id": "CMtiUHEqfEEO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oB4dK2N6fDlW",
+        "outputId": "965feb0f-4aac-4b25-d702-fabf61b8698a"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattened = arr_2d.flatten()"
+      ],
+      "metadata": {
+        "id": "OnEgC2Q7f_pd"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(flattened)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gnmp_etvgH6D",
+        "outputId": "9207b74f-50fc-473e-bc13-7247230b4699"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w7FlGVSqgNbV",
+        "outputId": "40eedeaf-ba4e-4991-e10b-26c64045ca6a"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "flattened[0] = 100\n",
+        "print(flattened)\n",
+        "print(arr_2d)  # 1차원으로 변환된 배열의 원소를 변경하는 것이 2차원 배열에 영향을 미치지 않음."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OlScObvVgSj9",
+        "outputId": "fb1065d0-14a7-452e-b415-49df595fbd56"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[100   1   2   3   4   5   6   7   8   9  10  11]\n",
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raveled = arr_2d.ravel()\n",
+        "print(raveled)\n",
+        "print(arr_2d)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MpLcf1v3ftik",
+        "outputId": "f63da4f5-d6ae-40e5-92de-a746398869a6"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+            "[[ 0  1  2  3]\n",
+            " [ 4  5  6  7]\n",
+            " [ 8  9 10 11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "raveled[0] = 100\n",
+        "print(raveled)\n",
+        "print(arr_2d)  # 1차원 배열의 수정 내용은 원본 2차원 배열에도 적용."
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NFz9xxjxg7_r",
+        "outputId": "9ff039de-643b-44a2-eebe-f70213c00ba8"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[100   1   2   3   4   5   6   7   8   9  10  11]\n",
+            "[[100   1   2   3]\n",
+            " [  4   5   6   7]\n",
+            " [  8   9  10  11]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## `np.newaxis` "
+      ],
+      "metadata": {
+        "id": "5jFRHEfWiQgG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LpbK8voKhIjL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
