--- a/ml01_numpy.ipynb
+++ b/ml01_numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHCf1ZbS8eiQ8LiNTEjFVR",
+      "authorship_tag": "ABX9TyNe7znfyILV+vPKvz99IakO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -968,7 +968,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## `np.newaxis` "
+        "## `np.newaxis` 속성을 사용한 차원 늘리기"
       ],
       "metadata": {
         "id": "5jFRHEfWiQgG"
@@ -976,9 +976,460 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "arr = np.arange(5)  # (5,) shape의 1차원 배열\n",
+        "print(arr)\n",
+        "print(arr.ndim)\n",
+        "print(arr.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LpbK8voKhIjL",
+        "outputId": "3616d036-263e-4b21-d9f6-12aaab0d77c3"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 2 3 4]\n",
+            "1\n",
+            "(5,)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 배열 arr을 (1, 5) shape의 2차원 배열로 변환\n",
+        "result = arr.reshape((1, -1))  # (1, 5)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vTiR8zJy0dF6",
+        "outputId": "e3b30c10-fd36-4310-f611-086df1a83e7f"
+      },
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = arr[np.newaxis, :]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BEzQhbga1H2p",
+        "outputId": "3681a2c4-c451-4ed9-f728-2ecd8e110a77"
+      },
+      "execution_count": 74,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2 3 4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 배열 arr을 (5, 1) shape의 2차원 배열 변환\n",
+        "result = arr.reshape((-1, 1))  # (5, 1)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ugF_DEJD1YMq",
+        "outputId": "45f5299c-2e33-4041-a242-d28e3f3d6877"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = arr[:, np.newaxis]\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UexI4CYZ14Ii",
+        "outputId": "1fb46059-b545-4299-dd1d-58d218244192"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0]\n",
+            " [1]\n",
+            " [2]\n",
+            " [3]\n",
+            " [4]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# concatenate\n",
+        "\n",
+        "* `np.concatenate([array1, array2, ...], axis=0)`: 특정 축(axis) 방향으로 이어 붙이기.\n",
+        "* `np.r_[array1, array2]`: 행(row) 이어 붙이기.\n",
+        "* `np.c_[array1, array2]`: 열(column) 이어 붙이기.\n"
+      ],
+      "metadata": {
+        "id": "JoDhfkVL2-Jk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = np.arange(6).reshape((2, 3))  # (2, 3) shape\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MN_kDsVb2aLR",
+        "outputId": "895ef09c-1355-47a7-80d2-536eefaa02a3"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2 = np.array([[10, 20, 30]])  # (1, 3) shape\n",
+        "print(a2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bYGI37MB30WQ",
+        "outputId": "c0b25c92-19aa-4349-a8e9-9bf917d516be"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[10 20 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = np.concatenate([a1, a2])  # axis=0 (기본값)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4pfhYma44Ibo",
+        "outputId": "68e4d168-0b96-4d0a-9ae9-021142daa76e"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0  1  2]\n",
+            " [ 3  4  5]\n",
+            " [10 20 30]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a3 = np.array([[100], [200]])  # (2, 1) shape\n",
+        "print(a3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0JCrkD9D4mzp",
+        "outputId": "f80d2c6c-394e-4da9-a9c8-fe1e33928789"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[100]\n",
+            " [200]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = np.concatenate([a1, a3], axis=1)\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Gy1lM8YH44Og",
+        "outputId": "d961a712-82f4-4c7d-d61a-3537d483ff6c"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[  0   1   2 100]\n",
+            " [  3   4   5 200]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.r_[a1, a2]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6l_gH--r5MYp",
+        "outputId": "70fc312c-b572-42c0-e7dd-b3d320ec9868"
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2],\n",
+              "       [ 3,  4,  5],\n",
+              "       [10, 20, 30]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.c_[a1, a3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_I-N4l645oFQ",
+        "outputId": "87b550a2-35f8-49c4-8d27-2af6f96efaa1"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  0,   1,   2, 100],\n",
+              "       [  3,   4,   5, 200]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Broadcasting(브로드캐스팅)\n",
+        "\n",
+        "* `np.ndarray`의 산술 연산(`+, -, *, /, ...`)은 같은 위치(인덱스)의 원소들끼리(element-wise) 연산이 수행됨.\n",
+        "* 서로 다른 shape을 갖는 배열들끼리 산술 연산을 가능한 경우가 있음.\n",
+        "    * broadcast\n"
+      ],
+      "metadata": {
+        "id": "N1Rm6LnC6NXx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = np.array([1, 2])  # (2,) shape의 1차원 배열\n",
+        "a2 = np.array([3, 4, 5])  # (3,) shape의 1차원 배열\n",
+        "# a1 + a2  #> ValueError 발생"
+      ],
+      "metadata": {
+        "id": "g37ddt_I59B4"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## ndarray와 scalar의 연산"
+      ],
+      "metadata": {
+        "id": "6M8rjf5_8GjC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 + 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "85zcpj4X7uaY",
+        "outputId": "d89a6c69-a7ae-4432-e5bf-a31788c4831a"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([11, 12])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 = np.array([[1], [2], [3]])\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wTAooy5G9EZC",
+        "outputId": "35bf38a1-efc0-4d75-f0f4-b2e6e9726ba1"
+      },
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1]\n",
+            " [2]\n",
+            " [3]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 + 10"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sahz4ONH9QYQ",
+        "outputId": "066ffcd3-3709-4af5-aa8c-1554846f66af"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[11],\n",
+              "       [12],\n",
+              "       [13]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 2차원 배열과 1차원 배열 또는 2차원 배열에서의 broadcast"
+      ],
+      "metadata": {
+        "id": "ugpNS2J_9-Xy"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LpbK8voKhIjL"
+        "id": "y2KKJh799SDQ"
       },
       "execution_count": null,
       "outputs": []
