Colaboratory를 통해 생성됨

--- a/ml01_numpy.ipynb
+++ b/ml01_numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNe7znfyILV+vPKvz99IakO",
+      "authorship_tag": "ABX9TyOXTZV4ZcWS6cJC58sZl7oR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1427,9 +1427,385 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a1 = np.arange(6).reshape((2, -1))  # (2, 3) 2d array\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y2KKJh799SDQ",
+        "outputId": "ea99ff51-d576-4551-9466-81e22494506b"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0 1 2]\n",
+            " [3 4 5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a2 = np.arange(10, 40, 10)  # (3,) 1d array\n",
+        "print(a2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-K0-JMtCVLI",
+        "outputId": "81fccfa3-b6e7-4f37-8744-531bcd0e1922"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[10 20 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a1 + a2\n",
+        "# (3,) 1d array --> (1, 3) 2d array --> (2, 3) 2d array broadcast"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l4pTt9WOCkyY",
+        "outputId": "7a1f5584-e699-44f7-b1e9-e3517d15eb6b"
+      },
+      "execution_count": 95,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[10, 21, 32],\n",
+              "       [13, 24, 35]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 95
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a3 = np.array([[10], [20]])  # (2, 1) 2d array\n",
+        "a1 + a3"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LppGFFHdCsCf",
+        "outputId": "efaba37b-e23a-4d11-ced8-2f73af918bcb"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[10, 11, 12],\n",
+              "       [23, 24, 25]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 97
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## broadcast 활용\n",
+        "\n",
+        "* 표준화(standardization): 평균이 0이 되고, 표준편차가 1이 되도록 변수들의 스케일을 변환하는 것.\n",
+        "* 정규화(normalization): 최솟값이 0이 되고, 최댓값이 1이 되도록 변수들의 스케일을 변환하는 것. min-max scaling.\n"
+      ],
+      "metadata": {
+        "id": "jn8jLm-kE1yg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 표준화"
+      ],
+      "metadata": {
+        "id": "iFnZzYyMFgO3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.arange(1, 6)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7YUtiCFQFjR4",
+        "outputId": "fce90d21-f4e5-4b6d-aa50-8862db5b3bf6"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1 2 3 4 5]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mu = np.mean(x)  # 1d-array 평균\n",
+        "print(mu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7U7McrqFnxu",
+        "outputId": "7f02bcef-341a-45e1-a0e0-acae3c56756d"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sigma = np.std(x)  # 1d-array 표준편차\n",
+        "print(sigma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4-S2ExsDF06W",
+        "outputId": "d90c48c3-7f82-4665-e79b-0b9eb690a303"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma  # 표준화\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fkmyGiHoF7Ju",
+        "outputId": "b8808344-0b07-4d1d-8209-225407c0d985"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[-1.41421356 -0.70710678  0.          0.70710678  1.41421356]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.mean(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TW93h8NSGsRW",
+        "outputId": "b8f8ef26-0127-4d44-ffb2-e72be94e2380"
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.std(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m9E5SzVSG2Wm",
+        "outputId": "a115c783-38b2-4a03-8c4a-e282084e85e2"
+      },
+      "execution_count": 103,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9999999999999999"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 103
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 정규화"
+      ],
+      "metadata": {
+        "id": "uA2FP5OqI9I_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xmin = np.min(x)\n",
+        "xmax = np.max(x)\n",
+        "print(xmin, xmax)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VOIqML80G4F1",
+        "outputId": "b8c95a9d-36f8-4cbe-85ba-ae1555fc52bf"
+      },
+      "execution_count": 104,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_normalized = (x - xmin) / (xmax - xmin)  # 정규화\n",
+        "print(x_normalized)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NH80KNZRJMbW",
+        "outputId": "919554a0-5f3f-4537-c423-e05a07729c81"
+      },
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0.   0.25 0.5  0.75 1.  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 2차원 배열의 표준화, 정규화"
+      ],
+      "metadata": {
+        "id": "_UJfeCgQLBBf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.arange(1, 7).reshape((3, -1))  # (3, 2) 2-d array\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HSA0XJI3JbCd",
+        "outputId": "30a4db9b-b5ec-4026-d8a8-3cea0ba37e32"
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1 2]\n",
+            " [3 4]\n",
+            " [5 6]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2차원 배열 x를 axis=0 방향으로 표준화, 정규화"
+      ],
+      "metadata": {
+        "id": "zyLISW4qLrjm"
+      }
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "y2KKJh799SDQ"
+        "id": "t7hHQMP9LOPF"
       },
       "execution_count": null,
       "outputs": []
