Colaboratory를 통해 생성됨

--- a/ml01_numpy.ipynb
+++ b/ml01_numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOXTZV4ZcWS6cJC58sZl7oR",
+      "authorship_tag": "ABX9TyPl7uNOie15RaVYK4jVf4jb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1769,7 +1769,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x = np.arange(1, 7).reshape((3, -1))  # (3, 2) 2-d array\n",
+        "x = np.arange(1, 7).reshape((3, -1))  # (3, 2) 2d-array\n",
         "print(x)"
       ],
       "metadata": {
@@ -1803,12 +1803,196 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "mu = np.mean(x, axis=0)\n",
+        "print(mu)\n",
+        "sigma = np.std(x, axis=0)\n",
+        "print(sigma)"
+      ],
       "metadata": {
-        "id": "t7hHQMP9LOPF"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t7hHQMP9LOPF",
+        "outputId": "0e2f8da1-d27f-4242-82c5-19bdd948969a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3. 4.]\n",
+            "[1.63299316 1.63299316]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_svb8HkLRyUd",
+        "outputId": "9205390e-9723-4a8e-cde2-99c46161306d"
+      },
+      "execution_count": 110,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.22474487 -1.22474487]\n",
+            " [ 0.          0.        ]\n",
+            " [ 1.22474487  1.22474487]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "xmax = np.max(x, axis=0)\n",
+        "print(xmax)\n",
+        "xmin = np.min(x, axis=0)\n",
+        "print(xmin)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vQhg40a-SXlr",
+        "outputId": "47fea46e-361e-44a0-f722-b8d48c5b2a2a"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5 6]\n",
+            "[1 2]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_normalized = (x - xmin) / (xmax - xmin)\n",
+        "print(x_normalized)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W6396DpRUBIU",
+        "outputId": "c1195730-7939-4ca5-a2bc-3176a4efa142"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.  0. ]\n",
+            " [0.5 0.5]\n",
+            " [1.  1. ]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "배열 x를 axis=1 방향으로 표준화, 정규화"
+      ],
+      "metadata": {
+        "id": "ZVmJtI0BViBU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mu = np.mean(x, axis=1, keepdims=True)\n",
+        "print(mu)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yrdnf7EpUcsq",
+        "outputId": "96abdb46-012f-4a7c-f18d-13a65eeb9863"
+      },
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[1.5]\n",
+            " [3.5]\n",
+            " [5.5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sigma = np.std(x, axis=1, keepdims=True)\n",
+        "print(sigma)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GUO0gvAdXP6j",
+        "outputId": "7e88c5bb-43ea-43bf-db42-41d9dfd45086"
+      },
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[0.5]\n",
+            " [0.5]\n",
+            " [0.5]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_scaled = (x - mu) / sigma\n",
+        "print(x_scaled)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GwEz17v3YXwy",
+        "outputId": "72c11048-a0c5-4b3d-eb22-57cf4d78a40f"
+      },
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[-1.  1.]\n",
+            " [-1.  1.]\n",
+            " [-1.  1.]]\n"
+          ]
+        }
+      ]
     }
   ]
 }
