Colaboratory를 통해 생성됨

--- a/ml03_regression.ipynb
+++ b/ml03_regression.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/LZWNr+d0CUlYUOREWnqQ",
+      "authorship_tag": "ABX9TyNebn7hvhF9aS6bzgWJi3aR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -770,13 +770,230 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "KNN(K-Nearest Neighbors) Regressor는 샘플에서 가장 가까운 k개의 훈련 셋의 레이블(타겟)들의 평균으로 숫자를 예측하는 ML 모델."
+      ],
       "metadata": {
-        "id": "qxepC59ffm-L"
+        "id": "l25YfXP_lkI9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 첫번째 훈련 샘플에서 가장 가까운 이웃 5개의 인덱스\n",
+        "indices = knn_reg.kneighbors(X_tr[0].reshape((1, -1)), return_distance=False)\n",
+        "print(indices)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qxepC59ffm-L",
+        "outputId": "0e4611d5-b2e2-48ce-ba81-a573a898c711"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 0 10 36  2 17]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_tr[indices[0]].mean()  # 가장 가까운 이웃 5개의 무게(타겟)들의 평균"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5F17EEmcmX7t",
+        "outputId": "1da70031-fef8-46f0-9408-24a1c47515b8"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "88.6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 셋의 예측값\n",
+        "y_te_pred = knn_reg.predict(X_te)\n",
+        "print(y_te_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1H90ZpugnEnt",
+        "outputId": "0c928e9d-2f28-4a58-d29a-7c349518793a"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[  60.    79.6  248.   122.   136.   847.   311.4  183.4  847.   113.\n",
+            " 1010.    60.   248.   248. ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y_te)  # 테스트 셋의 실젯값"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n7uLlqevnmqr",
+        "outputId": "a2b3b0cb-f0db-4287-90a9-7c2acda3a024"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[   5.9  100.   250.   130.   130.   820.   320.   188.   900.   125.\n",
+            " 1000.    51.5  250.   300. ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## 회귀 모델 평가 지표\n",
+        "\n",
+        "* MAE(Mean Absolute Error): 오차들의 절대값의 평균.\n",
+        "* MSE(Mean Squared Error): 오차들의 제곱의 평균.\n",
+        "* RMSE(Root Mean Squared Error): MSE의 제곱근.\n",
+        "* MAE, MSE, RMSE는 값이 작을 수록 좋은 점수. 값이 작을 수록 더 좋은 회귀 모델.\n",
+        "    * 평가 지표는 일반적으로 값이 클 수록 좋은 점수, 값이 작을 수록 나쁜 점수로 생각.\n",
+        "    * 회귀에서도 오차가 작을 수록 점수가 높아지고, 오차가 클 수록 점수가 낮아지는 평가 지표를 개발 -> R2 score(결정계수)\n",
+        "    * R2 score는 1에 가까울 수록 오차가 작은 모델, 작을 수록 오차가 큰 모델.\n"
+      ],
+      "metadata": {
+        "id": "n9KtUK0rodAO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* $ y_i $ : $i$번째 샘플의 실젯값(label)\n",
+        "* $ \\hat{y_i} $ : $i$번째 샘플의 예측값\n",
+        "* $ \\bar{y} $ : 타겟의 평균값\n",
+        "* $ n $ : 샘플 개수\n",
+        "\n",
+        "* MAE(Mean Absolute Errors)\n",
+        "$$\n",
+        "MAE = \\frac{1}{n} \\sum_{i=1}^{n} \\lvert y_i - \\hat{y_i} \\rvert\n",
+        "$$\n",
+        "\n",
+        "* MSE(Mean Squared Errors)\n",
+        "$$\n",
+        "MSE = \\frac{1}{n} \\sum_{i=1}^{n} ( y_i - \\hat{y_i} )^2\n",
+        "$$\n",
+        "\n",
+        "* RMSE(Root Mean Squared Errors)\n",
+        "$$\n",
+        "RMSE = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^{n} ( y_i - \\hat{y_i} )^2 }\n",
+        "$$\n",
+        "\n",
+        "* $ R^2 $ score(Coefficient of determinant, 결정 계수)\n",
+        "$$\n",
+        "R^2 = 1 - \\dfrac{\\text{MSE}}{\\text{Variance}} \n",
+        "    = 1 - \\dfrac{ \\sum_{i=1}^{n} (y_i - \\hat{y_i})^2 }\n",
+        "                { \\sum_{i=1}^{n} (y_i - \\bar{y})^2 }\n",
+        "$$\n",
+        "    * 결정 계수는 최댓값이 1이 되도록 만든 평가 지표.\n",
+        "    * 모델이 타겟을 오차없이 정확하게 예측하면, 실제값 - 예측값 = 0 이므로, 결정 계수는 최댓값 1이 됨.\n",
+        "    * 모델이 타겟을 매우 비슷하게 예측하면, 오차가 매우 작으면 분자가 0에 가까운 값이 되므로, 결정 계수는 1보다는 작지만 1에 가까운 값이 됨.\n",
+        "    * 모델이 타겟의 평균으로만 예측하는 정도라면, (분자) = (분모) 이므로, 결정 계수는 0이 됨.\n",
+        "    * 모델이 타겟의 평균 정도도 예측하지 못하면(오차가 매우 크면), (분자) > (분모)일 수 있고, 그런 경우 결정 계수는 음수가 될 수 있음."
+      ],
+      "metadata": {
+        "id": "2SbzIwnZti0w"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 훈련 셋 평가 지표들\n",
+        "print('MAE:', mean_absolute_error(y_tr, y_tr_pred))\n",
+        "print('MSE:', mean_squared_error(y_tr, y_tr_pred))\n",
+        "print('RMSE:', np.sqrt(mean_squared_error(y_tr, y_tr_pred)))\n",
+        "print('R2 score:', r2_score(y_tr, y_tr_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZpRQxmg7nrjL",
+        "outputId": "bb224705-851c-4f18-8254-54a2b52ae48a"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MAE: 35.76190476190476\n",
+            "MSE: 3716.5161904761903\n",
+            "RMSE: 60.96323638453089\n",
+            "R2 score: 0.9698823289099254\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 테스트 셋 평가 지표들\n",
+        "print('MAE:', mean_absolute_error(y_te, y_te_pred))\n",
+        "print('MSE:', mean_squared_error(y_te, y_te_pred))\n",
+        "print('RMSE:', np.sqrt(mean_squared_error(y_te, y_te_pred)))\n",
+        "print('R2 score:', r2_score(y_te, y_te_pred))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rkesnm14sTLU",
+        "outputId": "644575a9-7fc0-49f8-f3cb-b99916c9a92f"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "MAE: 19.157142857142862\n",
+            "MSE: 721.7385714285714\n",
+            "RMSE: 26.865192562655704\n",
+            "R2 score: 0.992809406101064\n"
+          ]
+        }
+      ]
     }
   ]
 }
