Colaboratory를 통해 생성됨

--- a/ml04_iris.ipynb
+++ b/ml04_iris.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3rHJoJdMfxBFRIkPqpl7J",
+      "authorship_tag": "ABX9TyMBSz7pQtR1tsS62EnkLBVb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -991,6 +991,113 @@
     {
       "cell_type": "markdown",
       "source": [
+        "\n",
+        "* 표준화: \"훈련 셋\"에서 찾은 평균과 표준편차로 훈련 셋과 테스트 셋의 스케일을 변환.\n",
+        "* 정규화: \"훈련 셋\"에서 찾은 최댓값과 최솟값으로 훈련 셋과 테스트 셋의 스케일을 변환.\n"
+      ],
+      "metadata": {
+        "id": "zwVNA65RpYDd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scaler = StandardScaler()"
+      ],
+      "metadata": {
+        "id": "IqDHfDivpWFb"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tr_scaled = scaler.fit_transform(X_tr)\n",
+        "#> (1) fit: X_tr의 평균과 표준편차를 찾음.\n",
+        "#> (2) transform: X_tr의 스케일을 변환."
+      ],
+      "metadata": {
+        "id": "kQ_HVC1CqYg5"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_tr_scaled[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v8IUsEo3qsPZ",
+        "outputId": "995650f5-edc7-4e36-f30f-40f5deff0a66"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.72156775, -0.33210111, -1.34572231, -1.32327558],\n",
+              "       [-1.12449223, -1.22765467,  0.41450518,  0.6517626 ],\n",
+              "       [ 1.14439475, -0.5559895 ,  0.58484978,  0.25675496],\n",
+              "       [-1.12449223,  0.11567567, -1.28894078, -1.45494479],\n",
+              "       [-0.40800161, -1.22765467,  0.13059752,  0.12508575]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_te_scaled = scaler.transform(X_te)\n",
+        "#> 테스트 셋에서는 훈련 셋의 평균과 표준편차로 스케일 변환만 수행."
+      ],
+      "metadata": {
+        "id": "PfxJiQhoq3GT"
+      },
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_te_scaled[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jT-LlcXOrEGR",
+        "outputId": "706da0e9-eecf-4672-dcdb-5956a0cfb766"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-1.72156775, -0.10821272, -1.40250384, -1.32327558],\n",
+              "       [ 0.30848902, -0.10821272,  0.64163131,  0.78343181],\n",
+              "       [-1.12449223, -1.45154306, -0.2668732 , -0.26992188],\n",
+              "       [-1.00507713, -1.67543145, -0.2668732 , -0.26992188],\n",
+              "       [-1.72156775,  0.33956406, -1.40250384, -1.32327558]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# KNN 모델 생성, 훈련, 평가\n",
         "\n",
         "* confusion_matrix\n",
@@ -999,6 +1106,167 @@
       "metadata": {
         "id": "V938G2ko7I33"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn = KNeighborsClassifier()  # ML 모델(알고리즘) 생성"
+      ],
+      "metadata": {
+        "id": "5sPchhc4rOu0"
+      },
+      "execution_count": 36,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "knn.fit(X_tr_scaled, y_tr)  # ML 모델 훈련"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xbM5J5prryMp",
+        "outputId": "5df9f3bd-3a3e-4f06-c2c8-3fe58950a919"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "KNeighborsClassifier()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_tr_pred = knn.predict(X_tr_scaled)  # 훈련 셋의 예측값"
+      ],
+      "metadata": {
+        "id": "xEvfyxkWr9bb"
+      },
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y_tr_pred)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "95x07rI1sRdp",
+        "outputId": "95bdc389-8f5d-4727-e473-25b9193b4a57"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 1 1 0 1 2 1 2 2 2 2 1 1 1 1 0 0 2 2 0 1 0 2 0 1 2 2 0 2 0 0 1 1 0 2 2 1\n",
+            " 1 2 1 0 1 0 2 0 0 2 0 0 0 0 1 2 1 0 2 1 2 0 2 0 1 2 0 2 1 2 1 1 2 0 0 0 1\n",
+            " 1 2 1 2 2 1 0 2 1 0 2 0 2 1 1 0 1 2 0 0 2 2 2 1 2 0 2 1 2 2 0 1 1 1 1 1 0\n",
+            " 2 1 1 0 0 0 0 1 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y_tr)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o9iuG19AsTcy",
+        "outputId": "1502142a-0f78-4d19-e276-1f939d3cd9dc"
+      },
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0 2 1 0 1 2 1 2 2 2 2 1 1 1 1 0 0 2 2 0 1 0 2 0 1 2 2 0 2 0 0 1 1 0 2 2 1\n",
+            " 1 2 1 0 1 0 2 0 0 2 0 0 0 0 1 2 1 0 2 1 2 0 2 0 1 2 0 1 1 2 1 1 2 0 0 0 2\n",
+            " 1 2 1 2 2 1 0 2 1 0 2 0 2 1 1 0 1 2 0 0 2 2 2 1 2 0 2 1 2 2 0 1 1 1 1 1 0\n",
+            " 2 1 1 0 0 0 0 1 0]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "confusion_matrix(y_tr, y_tr_pred)  # 오차(혼동)행렬"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "biPbMswPsjSb",
+        "outputId": "071061bd-cf63-4e7b-f512-66121104a386"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[40,  0,  0],\n",
+              "       [ 0, 39,  1],\n",
+              "       [ 0,  2, 38]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 41
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "report = classification_report(y_tr, y_tr_pred)  # 분류 보고서(정확도, 정밀도, 재현율)\n",
+        "print(report)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hBpdc3U8sqFx",
+        "outputId": "1abb8884-01f1-4c7b-84b8-b2886f19b641"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00        40\n",
+            "           1       0.95      0.97      0.96        40\n",
+            "           2       0.97      0.95      0.96        40\n",
+            "\n",
+            "    accuracy                           0.97       120\n",
+            "   macro avg       0.98      0.97      0.97       120\n",
+            "weighted avg       0.98      0.97      0.97       120\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
